--- a/CardBrowser/MainWindow.xaml
+++ b/CardBrowser/MainWindow.xaml
@@ -5,16 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CardBrowser"
         mc:Ignorable="d"
-        Title="Names" Height="180" Width="260">
+        Title="Card Browser" Height="600" Width="1000">
     <Grid Margin="10">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="120" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="100" />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.8*" />
             <ColumnDefinition Width="*" />
+
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
@@ -25,6 +29,9 @@
             <TextBox x:Name="txtName" />
             <Button x:Name="btnAdd" Margin="0,5,0,0" Click="ButtonAddName_Click">Add Name</Button>
         </StackPanel>
+        <Button x:Name="button" Grid.Column="1" Content="Save File" HorizontalAlignment="Left" Margin="45,25,0,0" Grid.Row="3" VerticalAlignment="Top"/>
+        <TextBox x:Name="FileName" HorizontalAlignment="Left" Margin="20,0,0,0" Grid.Row="3" TextWrapping="Wrap" Text="FileName" VerticalAlignment="Center" Width="235" Height="19" TextChanged="textBox_TextChanged"/>
+        <TextBox x:Name="Name" HorizontalAlignment="Left" Margin="20,10,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="235" Height="55"/>
     </Grid>
-        
+
 </Window>
