--- a/CardBrowser/MainWindow.xaml
+++ b/CardBrowser/MainWindow.xaml
@@ -9,29 +9,43 @@
     <Grid Margin="10">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="120" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="100" />
-            <RowDefinition Height="50" />
+            <RowDefinition Height="28*" />
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="82*"/>
+            <RowDefinition Height="85" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.8*" />
-            <ColumnDefinition Width="*" />
 
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="702" />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <Label>Names</Label>
-        <ListBox Grid.Row="1" x:Name="lstNames" />
+        <ListView x:Name="listCards" Grid.RowSpan="4" Margin="10,10,10,16">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Picture" Width="100">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel>
+                                    <Image Width="80" Source="{Binding photo}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Name" Width="570" DisplayMemberBinding="{Binding name}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
 
-        <StackPanel Grid.Row="1" Grid.Column="1" Margin="5,0,0,0">
-            <TextBox x:Name="txtName" />
-            <Button x:Name="btnAdd" Margin="0,5,0,0" Click="ButtonAddName_Click">Add Name</Button>
-        </StackPanel>
-        <Button x:Name="button" Grid.Column="1" Content="Save File" HorizontalAlignment="Left" Margin="45,25,0,0" Grid.Row="3" VerticalAlignment="Top"/>
-        <TextBox x:Name="FileName" HorizontalAlignment="Left" Margin="20,0,0,0" Grid.Row="3" TextWrapping="Wrap" Text="FileName" VerticalAlignment="Center" Width="235" Height="19" TextChanged="textBox_TextChanged"/>
-        <TextBox x:Name="Name" HorizontalAlignment="Left" Margin="20,10,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="235" Height="55"/>
+        <TextBlock Grid.Row="4" Grid.Column="1" Margin="10,25,10,25"/>
+        <Button x:Name="editButton" Grid.Column="1" Content="Edit" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="1" VerticalAlignment="Top" Height="35" Width="130" FontSize="20"/>
+        <Button x:Name="deleteButton" Grid.Column="1" Content="Delete" HorizontalAlignment="Center" Margin="0,25,0,0" Grid.Row="2" VerticalAlignment="Top" Height="35" Width="130" FontSize="20"/>
+        <Button x:Name="addButton" Grid.Column="1" Content="Add" HorizontalAlignment="Center" Margin="0,186,0,0" Grid.Row="3" VerticalAlignment="Top" Height="35" Width="130" FontSize="20"/>
+        <Button x:Name="uploadButton" Grid.Column="1" Content="Upload" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
+        <TextBox x:Name="uploadField" HorizontalAlignment="Center" Height="35" Grid.Row="4" TextWrapping="Wrap" Text="Upload" VerticalAlignment="Center" Width="682"/>
+        <TextBox x:Name="editField" Grid.Column="1" HorizontalAlignment="Center" Height="32" TextWrapping="Wrap" Text="Edit" VerticalAlignment="Top" Width="242" Margin="0,40,0,0"/>
     </Grid>
 
 </Window>
