--- a/CardBrowser/MainWindow.xaml
+++ b/CardBrowser/MainWindow.xaml
@@ -12,18 +12,19 @@
             <RowDefinition Height="28*" />
             <RowDefinition Height="25*"/>
             <RowDefinition Height="25*"/>
-            <RowDefinition Height="82*"/>
-            <RowDefinition Height="85" />
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="250.364" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
 
-            <ColumnDefinition Width="400" />
-            <ColumnDefinition Width="553*" />
-            <ColumnDefinition Width="327*"/>
+            <ColumnDefinition Width="45.484" />
+            <ColumnDefinition Width="354.516"/>
+            <ColumnDefinition Width="663*" />
+            <ColumnDefinition Width="217*"/>
         </Grid.ColumnDefinitions>
 
-        <ListView x:Name="listCards" Grid.RowSpan="4" Margin="10,10,10,16" TextElement.FontSize="16">
+        <ListView x:Name="listCards" Grid.RowSpan="5" Margin="10,10,10,42" TextElement.FontSize="16" Grid.ColumnSpan="2">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Picture" Width="100">
@@ -39,14 +40,11 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="editButton" Grid.Column="2" Content="Edit" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="1" VerticalAlignment="Top" Height="35" Width="130" FontSize="20"/>
-        <Button x:Name="deleteButton" Grid.Column="2" Content="Delete" HorizontalAlignment="Center" Margin="0,25,0,0" Grid.Row="2" VerticalAlignment="Top" Height="35" Width="130" FontSize="20"/>
-        <Button x:Name="addButton" Grid.Column="2" Content="Add" HorizontalAlignment="Center" Margin="0,186,0,0" Grid.Row="3" VerticalAlignment="Top" Height="35" Width="130" FontSize="20"/>
-        <Button x:Name="uploadButton" Grid.Column="2" Content="Upload" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Height="35" Width="130" FontSize="20" Margin="0,0,0,0"/>
-        <TextBox x:Name="uploadField" HorizontalAlignment="Left" Height="35" Grid.Row="4" TextWrapping="Wrap" Text="Upload" VerticalAlignment="Center" Width="682" FontSize="20" Grid.ColumnSpan="2" Margin="219,0,0,0"/>
-        <TextBox x:Name="editField" Grid.Column="2" HorizontalAlignment="Center" Height="32" TextWrapping="Wrap" Text="Edit" VerticalAlignment="Top" Width="242" Margin="0,40,0,0"/>
-        <TextBox x:Name="textBox" Grid.Column="1" HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="449" Height="47" FontSize="20"/>
-        <Image x:Name="image" Grid.Column="1" HorizontalAlignment="Left" Height="337" Margin="52,10,0,0" Grid.RowSpan="3" Grid.Row="1" VerticalAlignment="Top" Width="446"/>
+        <Button x:Name="editButton" Grid.Column="3" Content="Edit" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
+        <Button x:Name="deleteButton" Grid.Column="3" Content="Delete" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
+        <Button x:Name="uploadButton" Grid.Column="3" Content="Upload" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
+        <TextBox x:Name="textBox" Grid.Column="2" HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="448" Height="47" FontSize="20"/>
+        <Image x:Name="image" Grid.Column="2" HorizontalAlignment="Left" Height="420" Margin="52,10,0,0" Grid.RowSpan="4" Grid.Row="1" VerticalAlignment="Top" Width="550"/>
     </Grid>
 
 </Window>
