--- a/CardBrowser/MainWindow.xaml
+++ b/CardBrowser/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CardBrowser"
         mc:Ignorable="d"
-        Title="Card Browser" Height="600" Width="1300">
+        Title="Card Browser" Height="688" Width="1300">
     <Grid Margin="10">
 
         <Grid.RowDefinitions>
@@ -42,9 +42,11 @@
         </ListView>
         <Button x:Name="editButton" Grid.Column="3" Content="Edit" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
         <Button x:Name="deleteButton" Grid.Column="3" Content="Delete" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
-        <Button x:Name="uploadButton" Grid.Column="3" Content="Upload" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
-        <TextBox x:Name="textBox" Grid.Column="2" HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="448" Height="47" FontSize="20"/>
+        <Button x:Name="uploadButton" Click="Click_UploadFile" Grid.Column="3" Content="Upload" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
+        <TextBox x:Name="cardName" Grid.Column="2" HorizontalAlignment="Center" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="448" Height="47" FontSize="20"/>
         <Image x:Name="image" Grid.Column="2" HorizontalAlignment="Left" Height="420" Margin="52,10,0,0" Grid.RowSpan="4" Grid.Row="1" VerticalAlignment="Top" Width="550"/>
+        <TextBox x:Name="choosenFile" Grid.Column="2" HorizontalAlignment="Left" Margin="52,170,0,0" Grid.Row="4" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="555" Height="38"/>
+        <Button x:Name="addCard" Grid.Column="3" Content="Add" HorizontalAlignment="Center" Grid.Row="4" Height="35" Width="130" VerticalAlignment="Top" Margin="0,173,0,0" FontSize="20"/>
     </Grid>
 
 </Window>
