--- a/CardBrowser/MainWindow.xaml
+++ b/CardBrowser/MainWindow.xaml
@@ -30,9 +30,7 @@
                     <GridViewColumn Header="Picture" Width="100">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <StackPanel>
-                                    <Image Width="120" Source="{Binding BitmapImage}"/>
-                                </StackPanel>
+                                <Image Width="120" Source="{Binding BitmapImage}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -43,9 +41,9 @@
         <Button x:Name="editButton" Grid.Column="3" Content="Edit" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
         <Button x:Name="deleteButton" Grid.Column="3" Content="Delete" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
         <Button x:Name="addButton" Click="Click_AddCard" Grid.Column="3" Content="Add" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
-        <TextBox x:Name="cardName" Grid.Column="2" HorizontalAlignment="Center" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="448" Height="47" FontSize="20"/>
+        <TextBox x:Name="cardName" Grid.Column="2" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Width="448" Height="47" FontSize="20"/>
         <Image x:Name="bigImage" Grid.Column="2" HorizontalAlignment="Left" Height="420" Margin="52,10,0,0" Grid.RowSpan="4" Grid.Row="1" VerticalAlignment="Top" Width="550"/>
-        <TextBox x:Name="path" Grid.Column="2" HorizontalAlignment="Left" Margin="52,170,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="555" Height="38" FontSize="20"/>
+        <TextBox x:Name="path" Grid.Column="2" HorizontalAlignment="Left" Margin="52,170,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="555" Height="38" FontSize="14"/>
         <Button x:Name="uploadButton" Click="Click_UploadFile" Grid.Column="3" Content="Upload" HorizontalAlignment="Center" Grid.Row="4" Height="35" Width="130" VerticalAlignment="Top" Margin="0,173,0,0" FontSize="20"/>
     </Grid>
 
