--- a/CardBrowser/MainWindow.xaml
+++ b/CardBrowser/MainWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:CardBrowser"
         mc:Ignorable="d"
         Title="Card Browser" Height="688" Width="1300">
+        
     <Grid Margin="10">
-
         <Grid.RowDefinitions>
             <RowDefinition Height="28*" />
             <RowDefinition Height="25*"/>
@@ -18,7 +18,6 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-
             <ColumnDefinition Width="45.484" />
             <ColumnDefinition Width="354.516"/>
             <ColumnDefinition Width="503*" />
@@ -26,7 +25,7 @@
             <ColumnDefinition Width="196*"/>
         </Grid.ColumnDefinitions>
 
-        <ListView x:Name="listCards" Grid.RowSpan="6" Margin="10,10,10,42" TextElement.FontSize="16" Grid.ColumnSpan="2">
+        <ListView x:Name="listCards" Grid.RowSpan="6" Margin="10,10,10,42" TextElement.FontSize="16" Grid.ColumnSpan="2" PreviewMouseLeftButtonUp="ListCards_Click">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Picture" Width="100">
@@ -53,9 +52,7 @@
         <Button x:Name="browseButton" Click="Click_Browse" Grid.Column="3" Content="Browse" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Top" Height="35" Width="130" FontSize="20" Margin="0,25,0,0"/>
         <Button x:Name="uploadButton" Click="Click_UploadFile" Grid.Column="4" Content="Upload" HorizontalAlignment="Center" Grid.Row="5" Height="35" Width="130" VerticalAlignment="Top" Margin="0,25,0,0" FontSize="20"/>
         <Image x:Name="bigImage" Grid.Column="2" HorizontalAlignment="Left" Height="420" Margin="52,81,0,0" Grid.RowSpan="5" VerticalAlignment="Top" Width="614" Grid.ColumnSpan="2"/>
-        
-        
-        
+   
     </Grid>
 
 </Window>
