Config file added

--- a/CardBrowser/MainWindow.xaml
+++ b/CardBrowser/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CardBrowser"
         mc:Ignorable="d"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="Card Browser" Height="688" Width="1016">
 
     <Grid Margin="10">
