--- a/CardBrowser/MainWindow.xaml
+++ b/CardBrowser/MainWindow.xaml
@@ -15,7 +15,8 @@
             <RowDefinition Height="49*"/>
             <RowDefinition Height="49*"/>
             <RowDefinition Height="132" />
-            <RowDefinition Height="118.364"/>
+            <RowDefinition Height="57"/>
+            <RowDefinition Height="61.364"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -26,7 +27,7 @@
             <ColumnDefinition Width="154*"/>
         </Grid.ColumnDefinitions>
 
-        <ListView x:Name="listCards" Grid.RowSpan="6" Margin="10,10,22,42" TextElement.FontSize="11" Grid.ColumnSpan="2" FontSize="14" PreviewMouseLeftButtonUp="ListCards_Click">
+        <ListView x:Name="listCards" Grid.RowSpan="6" Margin="10,10,22,11" TextElement.FontSize="11" Grid.ColumnSpan="2" FontSize="14" PreviewMouseLeftButtonUp="ListCards_Click">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Picture" Width="120">
@@ -43,17 +44,18 @@
 
 
         <Label x:Name="filenameLabel" Grid.Column="2" Content="File Name" HorizontalAlignment="Left" Margin="16,26,0,0" Grid.Row="5" VerticalAlignment="Top" Height="25" Width="59"/>
-        <Label x:Name="pathLabel" Grid.Column="2" Content="Full Path" HorizontalAlignment="Left" Margin="23,59,0,0" Grid.Row="5" VerticalAlignment="Top" Height="26" Width="52" RenderTransformOrigin="0.534,0.6"/>
+        <Label x:Name="pathLabel" Grid.Column="2" Content="Full Path" HorizontalAlignment="Left" Margin="23,2,0,0" Grid.Row="6" VerticalAlignment="Top" Height="26" Width="52" RenderTransformOrigin="0.534,0.6"/>
         <!--><Label x:Name="nameLabel" Grid.Column="2" Content="Name" HorizontalAlignment="Left" Margin="23,20,0,0" VerticalAlignment="Top" Height="42" Width="75" FontSize="20"/></-->
         <TextBox x:Name="cardName" Grid.Column="2" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="353" Height="46" FontSize="20" Margin="0,10,0,0" IsReadOnly="true"/>
         <TextBox x:Name="path" Grid.Column="2" HorizontalAlignment="Left" Margin="83,25,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Width="308" Height="26" FontSize="12"/>
-        <TextBlock x:Name="fullPath" Grid.Column="2" HorizontalAlignment="Left" Margin="83,62,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Width="308" Height="38" FontSize="12"/>
+        <TextBlock x:Name="fullPath" Grid.Column="2" HorizontalAlignment="Left" Margin="83,3,0,0" Grid.Row="6" TextWrapping="Wrap" VerticalAlignment="Top" Width="308" Height="38" FontSize="12"/>
         <Button x:Name="changeNameButton" Click="Click_ChangeName" Grid.Column="3" Content="Change name" HorizontalAlignment="Center" VerticalAlignment="Top" Height="34" Width="130" FontSize="14" Margin="0,16,0,0" IsEnabled="false"/>
-        <Button x:Name="deleteButton" Click="Click_DeleteCard" Grid.Column="3" Content="Delete" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Top" Height="35" Width="130" FontSize="20" IsEnabled="false" Margin="0,62,0,0"/>
-        <Button x:Name="browseButton" Click="Click_Browse" Grid.Column="3" Content="Add card" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Top" Height="35" Width="130" FontSize="20" Margin="0,13,0,0"/>
-        <Button x:Name="uploadButton" Click="Click_UploadFile" Grid.Column="4" Content="Upload" HorizontalAlignment="Center" Grid.Row="5" Height="35" Width="130" VerticalAlignment="Top" Margin="0,13,0,0" FontSize="20" IsEnabled="false"/>
+        <Button x:Name="deleteButton" Click="Click_DeleteCard" Grid.Column="3" Content="Delete" HorizontalAlignment="Center" Grid.Row="6" VerticalAlignment="Top" Height="35" Width="130" FontSize="20" IsEnabled="false" Margin="0,3,0,0"/>
+        <Button x:Name="browseButton" Click="Click_Browse" Grid.Column="3" Content="Add card" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="35" Width="130" FontSize="20"/>
+        <Button x:Name="uploadButton" Click="Click_UploadFile" Grid.Column="4" Content="Upload" HorizontalAlignment="Center" Grid.Row="5" Height="35" Width="130" VerticalAlignment="Center" FontSize="20" IsEnabled="false"/>
         <Image x:Name="bigImage" Grid.Column="2" HorizontalAlignment="Left" Height="439" Margin="23,80,0,0" Grid.RowSpan="5" VerticalAlignment="Top" Width="666" Grid.ColumnSpan="3"/>
         <Button x:Name="saveNameButton" Click="Click_SaveName"  Grid.Column="4" Content="Save" HorizontalAlignment="Center" Margin="0,16,0,0" VerticalAlignment="Top" Width="130" Height="34" IsEnabled="false"/>
+        <Button x:Name="sortButton" Click="Click_Sort"  Grid.Column="1" Content="Sort" HorizontalAlignment="Left" Margin="136,5,0,0" Grid.Row="6" VerticalAlignment="Top" Width="88"/>
 
     </Grid>
 
